@@ -6,7 +6,6 @@ import static de.tum.in.www1.artemis.service.util.TimeLogUtil.formatDurationFrom
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.BadRequestException;
@@ -261,9 +260,9 @@ public class StudentExamResource {
 
         studentExamAccessService.checkCourseAndExamAccessElseThrow(courseId, examId, user, studentExam.isTestRun());
 
-        // students can not fetch the exam until 5 minutes before the exam start, we use the same constant in the client
+        // students can not fetch the exam until EXAM_START_WAIT_TIME_MINUTES minutes before the exam start, we use the same constant in the client
         if (ZonedDateTime.now().plusMinutes(EXAM_START_WAIT_TIME_MINUTES).isBefore(studentExam.getExam().getStartDate())) {
-            throw new AccessForbiddenException();
+            throw new AccessForbiddenException("Students cannot download the student exams until " + EXAM_START_WAIT_TIME_MINUTES + " minutes before the exam start");
         }
 
         if (!user.getId().equals(studentExam.getUser().getId())) {
@@ -365,7 +364,7 @@ public class StudentExamResource {
 
         // 2nd: check that the studentExam has been submitted, otherwise /student-exams/{studentExamId}/conduction should be used
         if (!studentExam.isSubmitted()) {
-            throw new AccessForbiddenException();
+            throw new AccessForbiddenException("You are not allowed to access the summary of a student exam which was NOT submitted!");
         }
 
         // 3rd fetch participations, submissions and results and connect them to the studentExam
@@ -412,7 +411,7 @@ public class StudentExamResource {
 
         // check that the studentExam has been submitted, otherwise /student-exams/conduction should be used
         if (!studentExam.isSubmitted() || !studentExam.areResultsPublishedYet()) {
-            throw new AccessForbiddenException();
+            throw new AccessForbiddenException("You are not allowed to access the grade summary of a student exam which was NOT submitted!");
         }
 
         loadExercisesForStudentExam(studentExam);
@@ -420,8 +419,7 @@ public class StudentExamResource {
         // 3rd fetch participations, submissions and results and connect them to the studentExam
         fetchParticipationsSubmissionsAndResultsForRealExam(studentExam, targetUser);
 
-        List<StudentParticipation> participations = studentExam.getExercises().stream().flatMap(exercise -> exercise.getStudentParticipations().stream())
-                .collect(Collectors.toList());
+        List<StudentParticipation> participations = studentExam.getExercises().stream().flatMap(exercise -> exercise.getStudentParticipations().stream()).toList();
 
         StudentExamWithGradeDTO studentExamWithGradeDTO = examService.calculateStudentResultWithGradeAndPoints(studentExam, participations);
         studentExamWithGradeDTO.studentExam = null;  // To save bandwidth.
