@@ -6,9 +6,13 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -18,13 +22,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.util.LinkedMultiValueMap;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.in.www1.artemis.domain.*;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.DiagramType;
 import de.tum.in.www1.artemis.domain.enumeration.IncludedInOverallScore;
+import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
 import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.exam.ExerciseGroup;
 import de.tum.in.www1.artemis.domain.exam.StudentExam;
@@ -106,6 +114,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Autowired
     private ExamAccessService examAccessService;
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     private List<User> users;
 
@@ -1274,7 +1285,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         exam = database.addTextModelingProgrammingExercisesToExam(exam, false, false);
         database.setupTestRunForExamWithExerciseGroupsForInstructor(exam, instructor, exam.getExerciseGroups());
         exam = request.get("/api/courses/" + exam.getCourse().getId() + "/exams/" + exam.getId() + "/exam-for-test-run-assessment-dashboard", HttpStatus.OK, Exam.class);
-        assertThat(exam.getExerciseGroups().stream().flatMap(exerciseGroup -> exerciseGroup.getExercises().stream()).collect(Collectors.toList())).isNotEmpty();
+        assertThat(exam.getExerciseGroups().stream().flatMap(exerciseGroup -> exerciseGroup.getExercises().stream()).toList()).isNotEmpty();
     }
 
     @Test
@@ -1756,9 +1767,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         assertThat(response.examId).isEqualTo(exam.getId());
 
         // Ensure that all exerciseGroups of the exam are present in the DTO
-        List<Long> exerciseGroupIdsInDTO = response.exerciseGroups.stream().map(exerciseGroup -> exerciseGroup.id).collect(Collectors.toList());
-        List<Long> exerciseGroupIdsInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getId).collect(Collectors.toList());
-        assertThat(exerciseGroupIdsInExam).containsExactlyInAnyOrderElementsOf(exerciseGroupIdsInDTO);
+        Set<Long> exerciseGroupIdsInDTO = response.exerciseGroups.stream().map(exerciseGroup -> exerciseGroup.id).collect(Collectors.toSet());
+        Set<Long> exerciseGroupIdsInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getId).collect(Collectors.toSet());
+        assertThat(exerciseGroupIdsInExam).isEqualTo(exerciseGroupIdsInDTO);
 
         // Compare exerciseGroups in DTO to exam exerciseGroups
         // Tolerated absolute difference for floating-point number comparisons
@@ -1790,9 +1801,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         }
 
         // Ensure that all registered students have a StudentResult
-        List<Long> studentIdsWithStudentResults = response.studentResults.stream().map(studentResult -> studentResult.userId).collect(Collectors.toList());
-        List<Long> registeredUsersIds = exam.getRegisteredUsers().stream().map(DomainObject::getId).collect(Collectors.toList());
-        assertThat(studentIdsWithStudentResults).containsExactlyInAnyOrderElementsOf(registeredUsersIds);
+        Set<Long> studentIdsWithStudentResults = response.studentResults.stream().map(studentResult -> studentResult.userId).collect(Collectors.toSet());
+        Set<Long> registeredUsersIds = exam.getRegisteredUsers().stream().map(DomainObject::getId).collect(Collectors.toSet());
+        assertThat(studentIdsWithStudentResults).isEqualTo(registeredUsersIds);
 
         // Compare StudentResult with the generated results
         for (var studentResult : response.studentResults) {
@@ -1820,10 +1831,10 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
             assertThat(studentResult.hasPassed).isNotNull();
 
             // Ensure that the exercise ids of the student exam are the same as the exercise ids in the students exercise results
-            List<Long> exerciseIdsOfStudentResult = studentResult.exerciseGroupIdToExerciseResult.values().stream().map(exerciseResult -> exerciseResult.exerciseId)
-                    .collect(Collectors.toList());
-            List<Long> exerciseIdsInStudentExam = studentExamOfUser.getExercises().stream().map(DomainObject::getId).collect(Collectors.toList());
-            assertThat(exerciseIdsOfStudentResult).containsExactlyInAnyOrderElementsOf(exerciseIdsInStudentExam);
+            Set<Long> exerciseIdsOfStudentResult = studentResult.exerciseGroupIdToExerciseResult.values().stream().map(exerciseResult -> exerciseResult.exerciseId)
+                    .collect(Collectors.toSet());
+            Set<Long> exerciseIdsInStudentExam = studentExamOfUser.getExercises().stream().map(DomainObject::getId).collect(Collectors.toSet());
+            assertThat(exerciseIdsOfStudentResult).isEqualTo(exerciseIdsInStudentExam);
             for (Map.Entry<Long, ExamScoresDTO.ExerciseResult> entry : studentResult.exerciseGroupIdToExerciseResult.entrySet()) {
                 var exerciseResult = entry.getValue();
 
@@ -2243,7 +2254,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         // Fetch the created participations and assign them to the exercises
         int participationCounter = 0;
-        List<Exercise> exercisesInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getExercises).flatMap(Collection::stream).collect(Collectors.toList());
+        List<Exercise> exercisesInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getExercises).flatMap(Collection::stream).toList();
         for (var exercise : exercisesInExam) {
             List<StudentParticipation> participations = studentParticipationRepository.findByExerciseIdWithEagerLegalSubmissionsResult(exercise.getId());
             exercise.setStudentParticipations(new HashSet<>(participations));
@@ -2565,4 +2576,266 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         request.get("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/start", HttpStatus.OK, StudentExam.class);
     }
 
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetExamForImportWithExercises_successful() throws Exception {
+        Exam received = request.get("/api/exams/" + exam2.getId(), HttpStatus.OK, Exam.class);
+        assertEquals(exam2, received);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor6", roles = "INSTRUCTOR")
+    public void testGetExamForImportWithExercises_noInstructorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testGetExamForImportWithExercises_noTutorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "editor1", roles = "EDITOR")
+    public void testGetExamForImportWithExercises_noEditorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithoutExercises_instructor_successful() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(3);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithExercises_instructor_successful() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams?withExercises=true", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(1);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithoutExercisesAndExamsNotLinkedToCourse_instructor_successful() throws Exception {
+        Course course3 = database.addEmptyCourse();
+        course3.setInstructorGroupName("non-instructors");
+        courseRepo.save(course3);
+        database.addExamWithExerciseGroup(course3, true);
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(3);
+    }
+
+    @Test
+    @WithMockUser(username = "admin", roles = "ADMIN")
+    public void testGetAllExamsOnPage_WithoutExercisesAndExamsNotLinkedToCourse_admin_successful() throws Exception {
+        Course course3 = database.addEmptyCourse();
+        course3.setInstructorGroupName("non-instructors");
+        courseRepo.save(course3);
+        database.addExamWithExerciseGroup(course3, true);
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(4);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testGetAllExamsOnPage_tutor() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        request.get("/api/exams", HttpStatus.FORBIDDEN, SearchResultPageDTO.class, database.searchMapping(search));
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testGetAllExamsOnPage_student() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        request.get("/api/exams", HttpStatus.FORBIDDEN, SearchResultPageDTO.class, database.searchMapping(search));
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testImportExamWithExercises_student() throws Exception {
+        final Exam exam = new Exam();
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam1, HttpStatus.FORBIDDEN, null);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testImportExamWithExercises_tutor() throws Exception {
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam1, HttpStatus.FORBIDDEN, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_idExists() throws Exception {
+        final Exam exam = ModelFactory.generateExam(course1);
+        exam.setId(2L);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_courseMismatch() throws Exception {
+        // No Course
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setCourse(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Exam Course and REST-Course mismatch
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setCourse(course2);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_dateConflict() throws Exception {
+        // Visible Date after Started Date
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setVisibleDate(ZonedDateTime.now().plusHours(2));
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Visible Date missing
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setVisibleDate(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+
+        // Started Date after End Date
+        final Exam examC = ModelFactory.generateExam(course1);
+        examC.setStartDate(ZonedDateTime.now().plusHours(2));
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examC, HttpStatus.BAD_REQUEST, null);
+
+        // Started Date missing
+        final Exam examD = ModelFactory.generateExam(course1);
+        examD.setStartDate(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examD, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_dateConflictTestExam() throws Exception {
+        // Working Time larger than Working window
+        final Exam examA = ModelFactory.generateTestExam(course1);
+        examA.setWorkingTime(3 * 60 * 60);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Working Time larger than Working window
+        final Exam examB = ModelFactory.generateTestExam(course1);
+        examB.setWorkingTime(0);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_pointConflict() throws Exception {
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setMaxPoints(-5);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_correctionRoundConflict() throws Exception {
+        // Correction round <= 0
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setNumberOfCorrectionRoundsInExam(0);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Correction round >= 2
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setNumberOfCorrectionRoundsInExam(3);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+
+        // Correction round != 0 for test exam
+        final Exam examC = ModelFactory.generateTestExam(course1);
+        examC.setNumberOfCorrectionRoundsInExam(1);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examC, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithoutExercises() throws Exception {
+        Exam exam = database.addExam(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getId()).isNotNull();
+        assertThat(received.getTitle()).isEqualTo(exam.getTitle());
+        assertThat(received.isTestExam()).isFalse();
+        assertThat(received.getWorkingTime()).isEqualTo(3000);
+        assertThat(received.getStartText()).isEqualTo("Start Text");
+        assertThat(received.getEndText()).isEqualTo("End Text");
+        assertThat(received.getConfirmationStartText()).isEqualTo("Confirmation Start Text");
+        assertThat(received.getConfirmationEndText()).isEqualTo("Confirmation End Text");
+        assertThat(received.getMaxPoints()).isEqualTo(90);
+        assertThat(received.getNumberOfExercisesInExam()).isEqualTo(1);
+        assertThat(received.getRandomizeExerciseOrder()).isFalse();
+        assertThat(received.getNumberOfCorrectionRoundsInExam()).isEqualTo(1);
+        assertThat(received.getCourse().getId()).isEqualTo(course1.getId());
+
+        exam.setVisibleDate(ZonedDateTime.ofInstant(exam.getVisibleDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setVisibleDate(ZonedDateTime.ofInstant(received.getVisibleDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getVisibleDate()).isEqualTo(exam.getVisibleDate());
+        exam.setStartDate(ZonedDateTime.ofInstant(exam.getStartDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setStartDate(ZonedDateTime.ofInstant(received.getStartDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getStartDate()).isEqualTo(exam.getStartDate());
+        exam.setEndDate(ZonedDateTime.ofInstant(exam.getEndDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setEndDate(ZonedDateTime.ofInstant(received.getEndDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getEndDate()).isEqualTo(exam.getEndDate());
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithExercises() throws Exception {
+        Exam exam = database.addExamWithModellingAndTextAndFileUploadAndQuizAndEmptyGroup(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getId()).isNotNull();
+        assertThat(received.getTitle()).isEqualTo(exam.getTitle());
+        assertThat(received.getCourse()).isEqualTo(course1);
+        assertThat(received.getCourse()).isEqualTo(exam.getCourse());
+        assertThat(received.getExerciseGroups().size()).isEqualTo(4);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithImportToOtherCourse() throws Exception {
+        Exam exam = database.addExamWithModellingAndTextAndFileUploadAndQuizAndEmptyGroup(course2);
+        exam.setCourse(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getExerciseGroups().size()).isEqualTo(4);
+
+        for (int i = 0; i <= 3; i++) {
+            Exercise expected = exam.getExerciseGroups().get(i).getExercises().stream().findFirst().get();
+            Exercise exerciseReceived = received.getExerciseGroups().get(i).getExercises().stream().findFirst().get();
+            assertThat(exerciseReceived.getExerciseGroup()).isNotEqualTo(expected.getExerciseGroup());
+            assertThat(exerciseReceived.getTitle()).isEqualTo(expected.getTitle());
+            assertThat(exerciseReceived.getId()).isNotEqualTo(expected.getId());
+        }
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_preCheckFailed() throws Exception {
+        Exam exam = ModelFactory.generateExam(course1);
+        ExerciseGroup programmingGroup = ModelFactory.generateExerciseGroup(false, exam);
+        exam = examRepository.save(exam);
+        exam.setId(null);
+        ProgrammingExercise programming = ModelFactory.generateProgrammingExerciseForExam(programmingGroup, ProgrammingLanguage.JAVA);
+        programmingGroup.addExercise(programming);
+        exerciseRepo.save(programming);
+
+        doReturn(true).when(versionControlService).checkIfProjectExists(any(), any());
+        doReturn(null).when(continuousIntegrationService).checkIfProjectExists(any(), any());
+
+        request.getMvc().perform(post("/api/courses/" + course1.getId() + "/exam-import").contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(exam)))
+                .andExpect(status().isBadRequest())
+                .andExpect(result -> assertThat(result.getResolvedException().getMessage()).isEqualTo("Exam contains programming exercise(s) with invalid short name."));
+    }
 }
